welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (((n<=100)&&(n>=90))||((n<=200)&&(n>=190))) {
        ^